corrected the spacing of the forcast area in javascript and css

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ h1 {
 }
 header {
   border-bottom: 1px solid rgb(230, 118, 228, 0.6);
-  padding: 0px 0px 30px 0px;
+  padding: 0px 0px 50px 0px;
 }
 input {
   padding: 10px;
@@ -80,19 +80,15 @@ input {
 }
 .forcastWeather {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .dailyForcast {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 10px;
 }
 
 .forcastDay {
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 10px;
 }
 .forcastEmoji {
   text-align: center;
@@ -102,17 +98,13 @@ input {
 }
 .maxAndMinTemperature {
   display: flex;
+  justify-content: space-around;
+  padding-bottom: 10px;
+  color: #f65282;
 }
 .weatherForcastMax {
-  text-align: center;
-  color: #f65282;
-  margin-bottom: 80px;
-  display: flex;
-  justify-content: center;
 }
 .weatherForcastMin {
-  padding: 0 10px;
-  color: #f65282;
 }
 footer {
   border-top: 1px solid rgb(230, 118, 228, 0.6);
